--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
                 </ul>
 
                 <div class="footer__socials">
-                    <a href=https://www.facebook.com/prashanna.drashan" target="_blank" class="footer__social">
+                    <a href=https://www.facebook.com/profile.php?id=100067408895187" target="_blank" class="footer__social">
                         <i class="uil uil-facebook"></i>
                     </a>
-                    <a href="https://www.instagram.com/prashanna01/" target="_blank" class="footer__social">
+                    <a href="https://www.instagram.com/alone_anjaan777?igshid=OGQ5ZDc2ODk2ZA" target="_blank" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
                     <a href="https://twitter.com/prashanna01" target="_blank" class="footer__social">
@@ -356,7 +356,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&#169; Ratheshan03. All rights reserved.</p>
+            <p class="footer__copy">&#169; Anjaan777. All rights reserved.</p>
         </div>
     </footer>
 
